# chicken-apk

./: .gitignore  android.apk.egg  android.egg  apk-module.scm  buffer.scm  chicken-android.scm  readme.md  reapk.scm  repackage.c  string-pool.scm
apk/: android.apk-module.scm
app-native/: .gitignore  Makefile  app.scm  build.scm
app/src/androidTest/java/com/example/sotest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.c
app/src/main/java/org/call_cc/template/sotest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
bxml/: android.bxml-module.scm  binary-xml.scm  buffer.scm
chicken-egg/: .gitignore  android.egg
chicken-egg/apk/: reapk.scm  repackage.c
chicken-egg/bxml/: string-pool.scm
chicken-egg/minizip/: ioapi.c  readme.md
chicken-egg/tests/: run.scm
manifest/: android.manifest-module.scm  binary-xml.scm  buffer.scm  prn.scm  string-pool.scm
minizip/: minizip-module.scm  minizip.scm  zip.c
template/: readme.md
template/app/: build.gradle
template/app/src/main/: AndroidManifest.xml
template/app/src/main/cpp/: CMakeLists.txt  app.c  template.c
template/app/src/main/java/org/call_cc/android/template/repl/: AutoScrollView.java  AutoScroller.java  MainActivity.java  (+1 more)
template/app/src/main/java/org/call_cc/template/sotest/: AutoScroller.java  MainActivity.java
template/app/src/main/res/layout/: activity_main.xml
template/app/src/main/res/values/: strings.xml
template/gradle/wrapper/: gradle-wrapper.properties
tests/: run.scm
